tests/negative/test_expr_dot_bad_member.orb
data Foo {
    i32 a, b;
}

fnc main() {
    let Foo f;
    f.100;
}